[package]
name = "backend"
version = "0.2.0"
authors = ["Tom Dymel <tom@dymel.dev>"]
edition = "2018"

[dependencies]
rocket = "*"
rocket_prometheus = "*"
rocket_okapi = "*"
okapi = "*"
schemars = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
mail = { path = "sub_crates/mail" }
validator = { path = "sub_crates/validator" }
str_util = { path = "sub_crates/str_util" }
language = { path = "sub_crates/language" }
time_util = { path = "sub_crates/time_util" }
lazy_static = "*"
regex = "~1.0"
dotenv = "*"
byteorder="*"
rocket-multipart-form-data="*"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "mysql_pool"]

[dev-dependencies]
proptest = "*"
mutagen = { git="https://github.com/llogiq/mutagen" }
testcontainers = "*"
mockall = { version = "0.7.1", features = ["nightly"] }