[package]
name = "backend"
version = "0.2.0"
authors = ["Tom Dymel <tom@dymel.dev>"]
edition = "2018"

[dependencies]
rocket = "*"
rocket_prometheus = "*"
rocket_okapi = "0.4.0"
okapi = "0.4.0"
schemars = "0.7.0"
serde = "*"
serde_derive = "*"
serde_json = "*"
mail = { path = "sub_crates/mail" }
validator = { path = "sub_crates/validator" }
str_util = { path = "sub_crates/str_util" }
language = { path = "sub_crates/language" }
time_util = { path = "sub_crates/time_util" }
lazy_static = "*"
regex = "~1.0"
dotenv = "*"
byteorder="*"
rocket-multipart-form-data="*"
grouping_by="*"
chrono="*"
rand = "*"
zip = "*"
walkdir = "*"
rust-lapper = "*"
rustc-hash = "1.1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "mysql_pool"]

[dev-dependencies]
proptest = "*"
mockall = { version = "0.7.1", features = ["nightly"] }
testcontainers = "0.9.1"
