[package]
name = "backend"
version = "0.2.0"
authors = ["Tom Dymel <tom@dymel.dev>"]
edition = "2018"

[dependencies]
rocket = "0.4.11"
rocket_prometheus = "0.9.0"
rocket_okapi = "0.5.1"
okapi = "0.4.0"
schemars = "0.7.0"
serde = "1.0.138"
serde_derive = "1.0.138"
serde_json = "1.0.82"
mail = { path = "sub_crates/mail" }
validator = { path = "sub_crates/validator" }
str_util = { path = "sub_crates/str_util" }
language = { path = "sub_crates/language" }
time_util = { path = "sub_crates/time_util" }
lazy_static = "1.4.0"
regex = "~1.0"
dotenv = "0.15.0"
byteorder="1.4.3"
rocket-multipart-form-data="0.9.6"
grouping_by="0.2.2"
chrono="0.4.19"
rand = "0.8.5"
zip = "0.6.2"
walkdir = "2.3.2"
rust-lapper = "1.0.1"
rustc-hash = "1.1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
urlencoding = "1.3.3"

[dependencies.rocket_contrib]
version = "0.4.11"
default-features = false
features = ["json", "mysql_pool"]

[dev-dependencies]
proptest = "1.0.0"
mockall = { version = "0.7.1", features = ["nightly"] }
testcontainers = "0.9.1"
