[package]
name = "backend"
version = "0.1.0"
authors = ["Tom Dymel <tom@dymel.dev>"]
edition = "2018"

[dependencies]
rocket = "*"
reqwest = { version = "*", features = ["blocking", "json"] }
tokio = { version = "*", features = ["full"] }
mysql_connection = { path = "./../../Backend/sub_crates/mysql_connection" }
time_util = { path = "./../../Backend/sub_crates/time_util" }
serde = "*"
serde_derive = "*"
serde_json = "*"
dotenv = "*"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]