[package]
name = "backend"
version = "0.1.0"
authors = ["Tom Dymel <tom@dymel.dev>"]
edition = "2018"

[dependencies]
rocket = "0.4.5"
reqwest = { version = "0.10.6", features = ["blocking", "json"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
dotenv = "0.15.0"
zmq = "0.9.2"
byteorder="1.3.4"
rustc-hash = "1.1.0"
lazy_static = "1.4.0"
regex = "~1.0"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json", "mysql_pool"]